# countOnMe

./: .env.example  .gitignore  CLAUDE.md  COMMIT_MSG.txt  README.md  THEME_GUIDELINES.md  docker-compose.yml  seed.py  seed.sh
.claude/: settings.json  (+1 more)
backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_devices_and_enums.py  0002_products.py  0003_product_portions.py  0004_food_entries.py  0005_body_weights.py  0006_user_goals.py  0007_catalog_products.py  0008_catalog_portions.py  0009_extend_unit_enum.py  0010_evolve_catalog_products.py  0011_add_barcode_to_products.py
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: __init__.py  deps.py  rate_limit.py
backend/app/core/: db.py  deps.py  enums.py  mixins.py  rate_limit.py  schemas.py
backend/app/db/: engine.py  session.py
backend/app/models/: body_weight.py  catalog_portion.py  catalog_product.py  device.py  food_entry.py  mixins.py  product.py  product_portion.py  user_goal.py
backend/app/schemas/: catalog.py  common.py  device.py  enums.py  food_entry.py  goal.py  portion.py  product.py  stats.py  sync.py  weight.py
backend/app/services/: auth.py  calculation.py  catalog.py  data.py  food_entries.py  goal_calculation.py  goals.py  portions.py  products.py  stats.py  weights.py
backend/scripts/: prepare_off_data.py  seed_catalog.py
backend/scripts/seeders/: __init__.py  base.py  name_cleaner.py  off.py  usda.py
backend/tests/: conftest.py  factories.py
(+383 files in other folders)
